fabric/deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: 'bsi-cred-pyme-web'
  labels:
    app: 'bsi-cred-pyme-web'
spec:
  template:
    spec:
      containers:
        - image: 'bsi-cred-pyme-web:latest'
          name: 'bsi-cred-pyme-web'
          securityContext:
            privileged: false
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1200m
              memory: 2Gi
            requests:
              cpu: 1000m
              memory: 1Gi
    metadata:
      labels:
        app: 'bsi-cred-pyme-web'
  replicas: 1
  selector:
    app: 'bsi-cred-pyme-web'
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - 'bsi-cred-pyme-web'
        from:
          kind: ImageStreamTag
          name: 'bsi-cred-pyme-web:latest'
