fabric/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bsi-cred-pyme-web
  name: bsi-cred-pyme-web
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: bsi-cred-pyme-web
  type: ClusterIP
  resources: {}
