fabric/route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: bsi-cred-pyme-web
  name: bsi-cred-pyme-web
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: bsi-cred-pyme-web
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
